[package]
name = "nvblas-sys"
version = "0.1.1"
edition = "2018"
links = "nvblas"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gfaster/nvblas-sys"
repository = "https://github.com/gfaster/nvblas-sys.git"
documentation = "https://docs.rs/nvblas-sys/"
description = "This package provides linkage to NVBLAS"

categories = ["external-ffi-bindings", "science"]
keywords = ["linear-algebra"]

[dependencies]
