[package]
name = "nvblas-sys"
version = "0.2.0"
edition = "2018"
links = "nvblas"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gfaster/nvblas-sys"
repository = "https://github.com/gfaster/nvblas-sys.git"
documentation = "https://docs.rs/nvblas-sys/"
description = "This package provides linkage as well as optional bindings and configuration for NVBLAS"

categories = ["external-ffi-bindings", "science"]
keywords = ["linear-algebra"]

[dependencies]
libc = { version = "0.2", optional = true }

[features]
standalone = ["dep:libc"]
configfile = []
